# minimal_route_solver

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  results.csv
docs/: CHALLENGE.md
minimal_route_solver/: commands.py  distance_matrix.py  models.py  solvers.py  utils.py
tests/: conftest.py  factories.py  test_commands.py  test_distance_matrix.py  test_solvers.py  test_utils.py
