[tool.poetry]
name = "minimal_route_solver"
version = "0.1.0"
description = "Reduces total distance to move cargos given a list of trucks"
authors = ["Tomas Menito <tomasmenito@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
